<resources>
    <string name="action_settings">Help</string>

    <!-- Content descriptions for image views -->
    <string name="cd_result_image">Result</string>
    <string name="cd_sepia_button">Vintage filter</string>
    <string name="cd_tuning_button">Tune</string>
    <string name="cd_accept_changes_button">Accept</string>
    <string name="cd_clear_changes_button">Reset</string>
    <string name="cd_flip_button">Flip horizontally</string>

    <!-- Strings for main menu items -->
    <string name="button_edit_text">Edit</string>
    <string name="button_save_text">Save</string>
    <string name="button_share_app_text">Invite your friends to FP+</string>

    <!-- General information strings -->
    <string name="info_swapping">Swapping faces</string>
    <string name="photo_saved">Saved</string>

    <!-- Strings for error information -->
    <string name="err_permission">Missing permission</string>
    <string name="err_insufficient_faces">At least two faces are needed.</string>
    <string name="err_no_image_present">Missing photo</string>
    <string name="err_could_not_swap_x">Could not swap photo:</string>
    <string name="err_could_not_swap">Check quality</string>

    <!-- Result activity -->
    <string name="rotate_button_image_text">Rotate</string>
    <string name="icon_brightness_icon_text">Brightness</string>
    <string name="icon_contrast_icon_text">Contrast</string>
    <string name="icon_gamma_icon_text">Gamma</string>
    <string name="icon_saturation_icon_text">Colorfulness</string>
    <string name="button_share_image_text">Share using</string>
    <string name="button_share_image_help_text">Sharing</string>

    <!-- Help toast -->
    <string name="camera_info">Camera</string>
    <string name="photo_library_info">Photo library</string>
    <string name="face_tab">Tab for photo</string>
    <string name="swap_button_info">Swap faces button. Appears when both tabs contain photos.</string>
    <string name="switch_button_info">Switch photo 1 and 2.</string>
    <string name="swap_multi_info">Swap within a photo.</string>

    <!-- Invitations -->
    <string name="invitation_message">Download link to</string>

</resources>
