<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/button_share_image_help_text"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_tune"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/button_edit_text"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/button_save_text"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline_pink_24dp"
        android:title="@string/action_settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>


</menu>